# pytest_api_test_demo

./: .gitignore  Makefile  README.md  conftest.py  index.html  init_pytest_uv.sh  notes.md  pyproject.toml  pytest.ini  requirements.txt  run_allure.py  run_allure_tests.sh  run_test.sh  run_uv_allure.sh  todo.md
.allure-report/: index.html
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
7/: index.html
8/: index.html
9/: index.html
allure-report/: index.html
allure-results/: 020785e7-f692-41be-8a98-9fc820fd34ec-result.json  028dd9b2-6379-4330-9b40-4dc9e626b845-attachment.txt  0354ae6d-1bce-4b92-9cb9-e86b8e9c19ce-result.json  14cc64a8-d55c-4d8a-a6f2-77c5e95f2820-result.json  1ba470ed-fe0d-47c6-b5b5-b83811b36130-container.json  295e842a-08b7-4566-aa44-266df057add8-result.json  2fb16257-e640-4064-b761-3e00fe9cb7d9-result.json  393009ad-5133-4bf8-9c8f-326d7c074d82-container.json  4592a028-b1a5-4ca5-bc37-5c7b698b4a2d-result.json  62fd9285-f256-47b3-9d9a-593d5a2c8dcd-container.json  66452389-7a6b-493e-8151-ec5c0ea75fb5-container.json  67d82a72-1b91-43ca-9f60-6bc3a32e1209-result.json  72702f93-d83d-4a68-b7ac-9f22e3217357-container.json  7b4f52d2-81e8-4b68-8f40-7b06daf3838a-result.json  87b93586-5bb0-47a1-b668-adda4956e2ef-result.json  88e66ac8-cc36-421a-bb3b-0b5f6eff380a-result.json  8ad2edd3-d44f-4db0-b513-63f5c62a793e-container.json  8c263b12-f543-4be9-bbd0-165ad0af73be-result.json  9e491379-74da-4748-b81e-e20280f03434-result.json  b1fc437f-87f6-40a5-b0fa-068f76b816c4-container.json  (+9 more)
config/: dev_config.json  (+1 more)
(+278 files in other folders)
